--- a/nodes/klicktipp-unsubscribe.html
+++ b/nodes/klicktipp-unsubscribe.html
@@ -10,7 +10,23 @@
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp unsubscribe">
-	<p>Unsubscribes a user from a KlickTipp list using their email address. This node requires valid session information to perform the action.</p>
+	<p>Unsubscribes a user from a KlickTipp list using their email address.</p>
+
+	<h3>Details</h3>
+	<p>
+	    This node unsubscribes a user from a KlickTipp list.
+	    The email to unsubscribe must be provided in <code>msg.payload.email</code>.
+	</p>
+	<p>
+	    If the operation is successful, the output message will contain <code>msg.payload.success = true</code>.
+	</p>
+	<p>
+	    On failure, <code>msg.payload</code> will contain <code>{ success: false }</code>, and an error message will be returned in <code>msg.error</code>.
+	</p>
+	<p>
+	    It requires valid session information. The session key for retrieving session data is passed automatically from the <strong>KlickTipp Login</strong> node.
+	</p>
+
 	<h3>Inputs</h3>
 	<dl class="message-properties">
 	    <dt>msg.payload <span class="property-type">object</span></dt>
@@ -20,44 +36,33 @@
 	            <li><code>email</code> - (Required) The email address of the user to unsubscribe.</li>
 	        </ul>
 	    </dd>
-	    <dt>msg.klicktipp <span class="property-type">object</span></dt>
-	    <dd>
-	        An object that must contain:
-	        <ul>
-	            <li><code>sessionId</code> - The session ID obtained from the login node.</li>
-	            <li><code>sessionName</code> - The session name (cookie) obtained from the login node.</li>
-	        </ul>
-	    </dd>
 	</dl>
-	<h3>Outputs</h3>
-	<dl class="message-properties">
-	    <dt>On success:</dt>
-	    <dd>
-	        <ul>
-	            <li><code>msg.payload</code> - Will be <code>{ success: true }</code>.</li>
-	        </ul>
-	    </dd>
-	    <dt>On failure:</dt>
-	    <dd>
-	        <ul>
-	            <li><code>msg.payload</code> - Will be <code>{ success: false }</code>.</li>
-	            <li><code>msg.error</code> - A string describing the error that occurred.</li>
-	        </ul>
-	    </dd>
-	</dl>
+
+	  <h3>Outputs</h3>
+	  <dl class="message-properties">
+	   <dt>msg.payload <span class="property-type">object</span></dt>
+	   <dd>
+		   On success:
+		   <ul>
+			   <li><code>{ success: true }</code></li>
+		   </ul>
+	   </dd>
+	   <dd>
+		   On failure:
+		   <ul>
+			   <li><code>{ success: false }</code></li>
+		   </ul>
+	   </dd>
+
+	   <dt>msg.error <span class="property-type">string</span></dt>
+	   <dd>An error message indicating why the request failed.</dd>
+	  </dl>
+
 	<h3>Node Status</h3>
 	<ul>
 	    <li><strong>Green (dot)</strong> - The user was unsubscribed successfully.</li>
 	    <li><strong>Red (ring)</strong> - The unsubscription failed (e.g., missing email or API error).</li>
 	</ul>
-	<h3>Details</h3>
-	<p>
-	    This node unsubscribes a user from a KlickTipp list by making a POST request to the KlickTipp API.
-	    The email to unsubscribe must be provided in <code>msg.payload.email</code>. Valid session information (sessionId and sessionName)
-	    from a prior login request must also be provided in <code>msg.klicktipp</code>. If the operation is successful,
-	    the output message will contain <code>msg.payload.success = true</code>. On failure, <code>msg.payload</code> will
-	    contain <code>{ success: false }</code>, and an error message will be returned in <code>msg.error</code>.
-	</p>
 </script>
 
 <script type="text/javascript">
