--- a/nodes/klicktipp-signin.html
+++ b/nodes/klicktipp-signin.html
@@ -22,48 +22,49 @@
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp signin">
-	<p>Signs a user into KlickTipp using an API key and either their email or SMS number. This node requires valid session information to perform the action.</p>
-	<h3>Inputs</h3>
-	<dl class="message-properties">
-	    <dt>msg.payload <span class="property-type">object</span></dt>
-	    <dd>
-	        An object that must contain:
-	        <ul>
-	            <li><code>apiKey</code> - (Required) The API key for authentication.</li>
-	            <li><code>email</code> - (Optional) The email address of the subscriber to sign in.</li>
-	            <li><code>smsNumber</code> - (Optional) The SMS number of the subscriber to sign in (if email is not provided).</li>
-	            <li><code>fields</code> - (Optional) Additional fields to attach to the subscriber (e.g., name, custom data).</li>
-	        </ul>
-	    </dd>
-	</dl>
-	<h3>Outputs</h3>
-	<dl class="message-properties">
-	    <dt>On success:</dt>
-	    <dd>
-	        <ul>
-	            <li><code>msg.payload</code> - An object containing the response data with the redirection URL.</li>
-	        </ul>
-	    </dd>
-	    <dt>On failure:</dt>
-	    <dd>
-	        <ul>
-	            <li><code>msg.payload</code> - Will be <code>{ success: false }</code>.</li>
-	            <li><code>msg.error</code> - An error message describing what went wrong.</li>
-	        </ul>
-	    </dd>
-	</dl>
-	<h3>Node Status</h3>
-	<ul>
-	    <li><strong>Green (dot)</strong> - Subscription was successful.</li>
-	    <li><strong>Red (ring)</strong> - Subscription failed (e.g., missing API key, missing email/SMS number, or API error).</li>
-	</ul>
+	<p>Subscribe a user to KlickTipp using the API key, email, or SMS number.</p>
+
 	<h3>Details</h3>
 	<p>
-	    This node subscribes a user to KlickTipp using their API key, email, or SMS number. Either the <code>email</code> or <code>smsnumber</code> must be provided
-	    in <code>msg.payload</code>. The API key is also required for authentication. Optionally, you can provide <code>fields</code> to attach additional
-	    information to the subscriber. If the operation is successful, the output message will contain the response data with the redirection URL. On failure,
-	    an error message will be returned in <code>msg.error</code> and <code>msg.payload</code> will contain <code>{ success: false }</code>.
+	   This node allows you to subscribe a user to KlickTipp by providing an <code>email</code> or <code>smsNumber</code> along with an <code>apiKey</code> for authentication.
+	   You can also optionally provide additional <code>fields</code> to attach custom data to the subscriber.
+	   On success, the response data with a redirection URL will be returned in <code>msg.payload</code>.
+	   On failure, an error message will be returned in <code>msg.error</code>, and <code>msg.payload.success</code> will be <code>false</code>.
 	</p>
+
+	<h3>Inputs</h3>
+	<dl class="message-properties">
+	   <dt>msg.payload <span class="property-type">object</span></dt>
+	   <dd>
+		   Must contain:
+		   <ul>
+			   <li><code>apiKey</code> - (Required) The API key for authentication.</li>
+			   <li><code>email</code> - (Optional) The email address of the subscriber to sign in.</li>
+			   <li><code>smsNumber</code> - (Optional) The SMS number of the subscriber to sign in (if email is not provided).</li>
+			   <li><code>fields</code> - (Optional) Additional fields for custom data (e.g., name, other details).</li>
+		   </ul>
+	   </dd>
+	</dl>
+
+	<h3>Outputs</h3>
+	<dl class="message-properties">
+	   <dt>msg.payload <span class="property-type">object</span></dt>
+	   <dd>
+		   <ul>
+			   <li>On success: Contains the response data, including the redirection URL.</li>
+			   <li>On failure: Will contain <code>{ success: false }</code>.</li>
+		   </ul>
+	   </dd>
+
+	   <dt>msg.error <span class="property-type">string</span></dt>
+	   <dd>An error message explaining why the request failed.</dd>
+	</dl>
+
+	<h3>Node Status</h3>
+	<ul>
+	   <li><strong>Green (dot)</strong> - Subscription was successful.</li>
+	   <li><strong>Red (ring)</strong> - Subscription failed (e.g., missing API key, missing email/SMS number, or API error).</li>
+	</ul>
 </script>
 
 <script type="text/javascript">
