--- a/nodes/klicktipp-signoff.html
+++ b/nodes/klicktipp-signoff.html
@@ -1,58 +1,64 @@
 <script type="text/x-red" data-template-name="klicktipp signoff">
 	<div class="form-row">
-	    <label for="node-input-apikey"><i class="fa fa-key"></i> <span>API Key</span></label>
-	    <input type="text" id="node-input-apikey" placeholder="Enter your API key">
-	</div>
-	<div class="form-row">
-	    <label for="node-input-email"><i class="fa fa-envelope"></i> <span>Email</span></label>
-	    <input type="text" id="node-input-email" placeholder="Enter email address">
-	</div>
-	<div class="form-row">
-	    <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
-	    <input type="text" id="node-input-name" placeholder="Enter node name">
-	</div>
+	       <label for="node-input-apikey"><i class="fa fa-key"></i> <span>API Key</span></label>
+	       <input type="text" id="node-input-apikey" placeholder="Enter your API key">
+	   </div>
+	   <div class="form-row">
+	       <label for="node-input-email"><i class="fa fa-envelope"></i> <span>Email</span></label>
+	       <input type="text" id="node-input-email" placeholder="Enter email address">
+	   </div>
+	   <div class="form-row">
+	       <label for="node-input-name"><i class="fa fa-tag"></i> <span>Name</span></label>
+	       <input type="text" id="node-input-name" placeholder="Enter node name">
+	   </div>
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp signoff">
-	<p>Unsubscribes a user from KlickTipp using their API key and email. This node requires valid API credentials to perform the action.</p>
-	<h3>Inputs</h3>
-	<dl class="message-properties">
-	    <dt>msg.payload <span class="property-type">object</span></dt>
-	    <dd>
-	        An object that must contain:
-	        <ul>
-	            <li><code>apiKey</code> - (Required) The API key for authentication.</li>
-	            <li><code>email</code> - (Required) The email address of the subscriber to unsubscribe.</li>
-	        </ul>
-	    </dd>
-	</dl>
-	<h3>Outputs</h3>
-	<dl class="message-properties">
-	    <dt>On success:</dt>
-	    <dd>
-	        <ul>
-	            <li><code>msg.payload</code> - Will be <code>{ success: true }</code>.</li>
-	        </ul>
-	    </dd>
-	    <dt>On failure:</dt>
-	    <dd>
-	        <ul>
-	            <li><code>msg.payload</code> - An object containing <code>success: false</code>.</li>
-	            <li><code>msg.error</code> - A string describing the error that occurred (e.g., "Missing API key or email").</li>
-	        </ul>
-	    </dd>
-	</dl>
-	<h3>Node Status</h3>
-	<ul>
-	    <li><strong>Green (dot)</strong> - Unsubscription was successful.</li>
-	    <li><strong>Red (ring)</strong> - Unsubscription failed (e.g., missing API key or email, or API error).</li>
-	</ul>
-	<h3>Details</h3>
-	<p>
-	    This node unsubscribes a user from KlickTipp using their API key and email address. The <code>apikey</code> and <code>email</code> must be provided
-	    in <code>msg.payload</code>. If the operation is successful, the output message will contain <code>msg.payload.success = true</code>. On failure,
-	    <code>msg.payload.success = false</code>, and an error message will be returned in <code>msg.error</code>.
-	</p>
+	<p>Unsubscribe a user from KlickTipp using the API key and email.</p>
+
+	   <h3>Details</h3>
+	   <p>
+	       This node unsubscribes a user from KlickTipp using the provided API key and email address. The <code>apikey</code> and <code>email</code> must be included in <code>msg.payload</code>.
+	       If the operation is successful, <code>msg.payload.success = true</code> will be returned. On failure, <code>msg.payload.success = false</code>, and an error message will be returned in <code>msg.error</code>.
+	   </p>
+
+	   <h3>Inputs</h3>
+	   <dl class="message-properties">
+	       <dt>msg.payload <span class="property-type">object</span></dt>
+	       <dd>
+	           Must contain:
+	           <ul>
+	               <li><code>apiKey</code> - (Required) The API key for authentication.</li>
+	               <li><code>email</code> - (Required) The email address of the subscriber to unsubscribe.</li>
+	           </ul>
+	       </dd>
+	   </dl>
+
+	   <h3>Outputs</h3>
+	   <dl class="message-properties">
+	       <dt>msg.payload <span class="property-type">object</span></dt>
+	       <dd>
+	           On success:
+	           <ul>
+	               <li><code>{ success: true }</code></li>
+	           </ul>
+	       </dd>
+	       <dd>
+	           On failure:
+	           <ul>
+	               <li><code>{ success: false }</code></li>
+	           </ul>
+	       </dd>
+
+	       <dt>msg.error <span class="property-type">string</span></dt>
+	       <dd>An error message indicating why the request failed.</dd>
+	   </dl>
+
+	   <h3>Node Status</h3>
+	   <ul>
+	       <li><strong>Green (dot)</strong> - Unsubscription was successful.</li>
+	       <li><strong>Red (ring)</strong> - Unsubscription failed (e.g., missing API key, email, or API error).</li>
+	   </ul>
 </script>
 
 <script type="text/javascript">
