--- a/nodes/klicktipp-subscriber-index.html
+++ b/nodes/klicktipp-subscriber-index.html
@@ -10,46 +10,47 @@
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp subscriber index">
-	<p>Fetches a list of all active subscribers in KlickTipp. This node requires valid session information to perform the action.</p>
-	<h3>Inputs</h3>
-	<dl class="message-properties">
-	    <dt>msg.klicktipp <span class="property-type">object</span></dt>
-	    <dd>
-	        An object that must contain:
-	        <ul>
-	            <li><code>sessionId</code> - The session ID obtained from the login node.</li>
-	            <li><code>sessionName</code> - The session name (cookie) obtained from the login node.</li>
-	        </ul>
-	    </dd>
-	</dl>
+	<p>Fetches a list of all active subscribers in KlickTipp.</p>
+
+	<h3>Details</h3>
+	<p>
+	    This node retrieves a list of all active subscribers in KlickTipp.
+	</p>
+	<p>
+	    If the request is successful, the output message will contain an array of subscriber IDs in <code>msg.payload</code>.
+	</p>
+	<p>
+	    On failure, <code>msg.payload</code> will contain <code>{ success: false }</code>, and an error message will be returned in <code>msg.error</code>.
+	</p>
+	<p>
+	    It requires valid session information. The session key for retrieving session data is passed automatically from the <strong>KlickTipp Login</strong> node.
+	</p>
+
 	<h3>Outputs</h3>
 	<dl class="message-properties">
-	    <dt>On success:</dt>
-	    <dd>
-	        <ul>
-	            <li><code>msg.payload</code> - An array containing the subscriber IDs of all active subscribers.</li>
-	        </ul>
-	    </dd>
-	    <dt>On failure:</dt>
-	    <dd>
-	        <ul>
-	            <li><code>msg.payload</code> - Will be <code>{ success: false }</code>>.</li>
-	            <li><code>msg.error</code> - A string describing the error that occurred (e.g., "Unknown error" or API error message).</li>
-	        </ul>
-	    </dd>
+	   <dt>msg.payload <span class="property-type">object</span></dt>
+	   <dd>
+		   On success:
+		   <ul>
+			   <li>An array containing the subscriber IDs of all active subscribers.</li>
+		   </ul>
+	   </dd>
+	   <dd>
+		   On failure:
+		   <ul>
+			   <li><code>{ success: false }</code></li>
+		   </ul>
+	   </dd>
+
+	   <dt>msg.error <span class="property-type">string</span></dt>
+	   <dd>An error message indicating why the request failed.</dd>
 	</dl>
+
 	<h3>Node Status</h3>
 	<ul>
 	    <li><strong>Green (dot)</strong> - Successfully fetched the subscriber list.</li>
 	    <li><strong>Red (ring)</strong> - Failed to fetch subscribers (e.g., API error).</li>
 	</ul>
-	<h3>Details</h3>
-	<p>
-	    This node retrieves a list of all active subscribers in KlickTipp. The node requires valid session information,
-	    including the <code>sessionId</code> and <code>sessionName</code> in <code>msg.klicktipp</code>. If the request is successful,
-	    the output message will contain an array of subscriber IDs in <code>msg.payload</code>. On failure, <code>msg.payload</code> will
-	    contain <code>{ success: false }</code>, and an error message will be returned in <code>msg.error</code>.
-	</p>
 </script>
 
 <script type="text/javascript">
