--- a/nodes/klicktipp-tag-get.html
+++ b/nodes/klicktipp-tag-get.html
@@ -11,52 +11,57 @@
 
 <script type="text/x-red" data-help-name="klicktipp tag get">
 	<p>Fetches the definition of a specific tag from the KlickTipp API based on the provided tag ID.</p>
+
+	<h3>Details</h3>
+	<p>
+	    This node fetches the definition of a specific tag from the KlickTipp API using the <code>tagId</code> provided in <code>msg.payload</code>.
+	</p>
+	<p>.
+	    On success, the fetched tag definition is returned in <code>msg.payload</code>.
+	</p>
+	<p>
+	    On failure, <code>msg.payload</code> will contain <code>{ success: false }</code>, and an error message will be returned in <code>msg.error</code>.
+	</p>
+	<p>
+	    It requires valid session information. The session key for retrieving session data is passed automatically from the <strong>KlickTipp Login</strong> node.
+	</p>
+
 	<h3>Inputs</h3>
 	<dl class="message-properties">
-	    <dt>msg.klicktipp <span class="property-type">object</span></dt>
-	    <dd>
-	        An object that must contain:
-	        <ul>
-	            <li><code>sessionId</code> - The session ID obtained from the login node.</li>
-	            <li><code>sessionName</code> - The session name (cookie) obtained from the login node.</li>
-	        </ul>
-	    </dd>
 	    <dt>msg.payload <span class="property-type">object</span></dt>
 	    <dd>
 	        An object that must contain:
 	        <ul>
-	            <li><code>tagId</code> - The ID of the tag to fetch.</li>
+	            <li><code>tagId</code> - (Required) The ID of the tag to fetch.</li>
 	        </ul>
 	    </dd>
 	</dl>
+
 	<h3>Outputs</h3>
 	<dl class="message-properties">
-	    <dt>On success:</dt>
-	    <dd>
-	        <ul>
-	            <li><code>msg.payload</code> - The tag definition object retrieved from the API.</li>
-	        </ul>
-	    </dd>
-	    <dt>On failure:</dt>
-	    <dd>
-	        <ul>
-	            <li><code>msg.payload</code> - Will be <code>{ success: false }</code>.</li>
-	            <li><code>msg.error</code> - Will contain an error message describing what went wrong.</li>
-	        </ul>
-	    </dd>
+		<dt>msg.payload <span class="property-type">object</span></dt>
+		<dd>
+			On success:
+			<ul>
+				<li>The tag definition object.</li>
+			</ul>
+		</dd>
+		<dd>
+			On failure:
+			<ul>
+				<li><code>{ success: false }</code></li>
+			</ul>
+		</dd>
+
+		<dt>msg.error <span class="property-type">string</span></dt>
+		<dd>An error message explaining why the request failed.</dd>
 	</dl>
+
 	<h3>Node Status</h3>
 	<ul>
 	    <li><strong>Green (dot)</strong> - Tag definition fetched successfully.</li>
 	    <li><strong>Red (ring)</strong> - Failed to fetch tag definition (e.g., missing tag ID or API error).</li>
 	</ul>
-	<h3>Details</h3>
-	<p>
-	    This node fetches the definition of a specific tag from the KlickTipp API using the <code>tagId</code> provided in <code>msg.payload</code>.
-	    Session information (<code>sessionId</code> and <code>sessionName</code>) must be provided in <code>msg.klicktipp</code> for a successful API call.
-	    On success, the fetched tag definition is returned in <code>msg.payload</code>. On failure, <code>msg.payload</code> will
-	    contain <code>{ success: false }</code>, and an error message will be returned in <code>msg.error</code>.
-	</p>
 </script>
 
 <script type="text/javascript">
