--- a/nodes/klicktipp-tag-index.html
+++ b/nodes/klicktipp-tag-index.html
@@ -11,45 +11,45 @@
 
 <script type="text/x-red" data-help-name="klicktipp tag index">
 	<p>Fetches all manual tags associated with the logged-in user from the KlickTipp API.</p>
-	   <h3>Inputs</h3>
-	   <dl class="message-properties">
-	       <dt>msg.klicktipp <span class="property-type">object</span></dt>
-	       <dd>
-	           An object that must contain:
-	           <ul>
-	               <li><code>sessionId</code> - The session ID obtained from the login node.</li>
-	               <li><code>sessionName</code> - The session name (cookie) obtained from the login node.</li>
-	           </ul>
-	       </dd>
-	   </dl>
-	   <h3>Outputs</h3>
-	   <dl class="message-properties">
-	       <dt>On success:</dt>
-	       <dd>
-	           <ul>
-	               <li><code>msg.payload</code> - An array of all manual tags associated with the logged-in user.</li>
-	           </ul>
-	       </dd>
-	       <dt>On failure:</dt>
-	       <dd>
-	           <ul>
-	               <li><code>msg.payload</code> - Will be <code>{ success: false }</code>.</li>
-	               <li><code>msg.error</code> - Will contain an error message describing what went wrong.</li>
-	           </ul>
-	       </dd>
-	   </dl>
-	   <h3>Node Status</h3>
-	   <ul>
-	       <li><strong>Green (dot)</strong> - Tags were fetched successfully.</li>
-	       <li><strong>Red (ring)</strong> - Failed to fetch the tags due to an error (e.g., API request failed or session invalid).</li>
-	   </ul>
-	   <h3>Details</h3>
-	   <p>
-	   	This node fetches all manual tags from the KlickTipp API. It requires session information (both <code>sessionId</code>
-	   	and <code>sessionName</code>) to be passed in <code>msg.klicktipp</code> from a prior login.
-	   	On success, it returns an array of manual tags in <code>msg.klicktipp.tagsList</code>. On failure, <code>msg.payload</code> will
-	       contain <code>{ success: false }</code>, and an error message will be returned in <code>msg.error</code>.
-	   </p>
+
+	<h3>Details</h3>
+	<p>
+		This node fetches all manual tags from the KlickTipp API.
+	</p>
+	<p>
+		On success, it returns an array of manual tags in <code>msg.klicktipp.tagsList</code>.
+	<p>
+		On failure, <code>msg.payload</code> will contain <code>{ success: false }</code>, and an error message will be returned in <code>msg.error</code>.
+	</p>
+	<p>
+	    It requires valid session information. The session key for retrieving session data is passed automatically from the <strong>KlickTipp Login</strong> node.
+	</p>
+
+	<h3>Outputs</h3>
+	<dl class="message-properties">
+		<dt>msg.payload <span class="property-type">object</span></dt>
+		<dd>
+			On success:
+			<ul>
+				<li>An array of all manual tags associated with the logged-in user.</li>
+			</ul>
+		</dd>
+		<dd>
+			On failure:
+			<ul>
+				<li><code>{ success: false }</code></li>
+			</ul>
+		</dd>
+
+		<dt>msg.error <span class="property-type">string</span></dt>
+		<dd>An error message explaining why the request failed.</dd>
+	</dl>
+
+	  <h3>Node Status</h3>
+	  <ul>
+	   <li><strong>Green (dot)</strong> - Tags were fetched successfully.</li>
+	   <li><strong>Red (ring)</strong> - Failed to fetch the tags due to an error (e.g., API request failed or session invalid).</li>
+	  </ul>
 </script>
 
 <script type="text/javascript">
