--- a/nodes/klicktipp-untag-email.html
+++ b/nodes/klicktipp-untag-email.html
@@ -10,7 +10,23 @@
 </script>
 
 <script type="text/x-red" data-help-name="klicktipp untag email">
-	<p>Removes a tag from a subscriber (identified by their email) in KlickTipp. This node requires valid session information to perform the action.</p>
+	<p>Removes a tag from a subscriber (identified by their email) in KlickTipp.</p>
+
+	<h3>Details</h3>
+	<p>
+	    This node removes a tag from a subscriber in KlickTipp using their email and the tag ID. The email and tag ID must be provided in
+	    <code>msg.payload.email</code> and <code>msg.payload.tagId</code>.
+	</p>
+	<p>
+	    If the operation is successful, <code>msg.payload</code> will contain code>{ success: true }</code>.
+	</p>
+	<p>
+	    On failure, <code>msg.payload</code> will contain <code>{ success: false }</code>, and an error message will be returned in <code>msg.error</code>.
+	</p>
+	<p>
+	    It requires valid session information. The session key for retrieving session data is passed automatically from the <strong>KlickTipp Login</strong> node.
+	</p>
+
 	<h3>Inputs</h3>
 	<dl class="message-properties">
 	    <dt>msg.payload <span class="property-type">object</span></dt>
@@ -21,44 +37,33 @@
 	            <li><code>tagId</code> - (Required) The ID of the tag to be removed from the subscriber.</li>
 	        </ul>
 	    </dd>
-	    <dt>msg.klicktipp <span class="property-type">object</span></dt>
-	    <dd>
-	        An object that must contain:
-	        <ul>
-	            <li><code>sessionId</code> - The session ID obtained from the login node.</li>
-	            <li><code>sessionName</code> - The session name (cookie) obtained from the login node.</li>
-	        </ul>
-	    </dd>
 	</dl>
-	<h3>Outputs</h3>
-	<dl class="message-properties">
-	    <dt>On success:</dt>
-	    <dd>
-	        <ul>
-	            <li><code>msg.payload</code> - Will be <code>{ success: true }</code>.</li>
-	        </ul>
-	    </dd>
-	    <dt>On failure:</dt>
-	    <dd>
-	        <ul>
-	            <li><code>msg.payload</code> - Will be <code>{ success: false }</code>.</li>
-	            <li><code>msg.error</code> - A string describing the error that occurred (e.g., "Missing email or tag ID" or API error message).</li>
-	        </ul>
-	    </dd>
-	</dl>
+
+	  <h3>Outputs</h3>
+	  <dl class="message-properties">
+	   <dt>msg.payload <span class="property-type">object</span></dt>
+	   <dd>
+		   On success:
+		   <ul>
+			   <li><code>{ success: true }</code></li>
+		   </ul>
+	   </dd>
+	   <dd>
+		   On failure:
+		   <ul>
+			   <li><code>{ success: false }</code></li>
+		   </ul>
+	   </dd>
+
+	   <dt>msg.error <span class="property-type">string</span></dt>
+	   <dd>An error message indicating why the request failed.</dd>
+	  </dl>
+
 	<h3>Node Status</h3>
 	<ul>
 	    <li><strong>Green (dot)</strong> - The email was untagged successfully.</li>
 	    <li><strong>Red (ring)</strong> - The untagging process failed (e.g., missing email, tag ID, or API error).</li>
 	</ul>
-	<h3>Details</h3>
-	<p>
-	    This node removes a tag from a subscriber in KlickTipp using their email and the tag ID. The email and tag ID must be provided in
-	    <code>msg.payload.email</code> and <code>msg.payload.tagId</code>, respectively. Valid session information (sessionId and sessionName)
-	    must also be provided in <code>msg.klicktipp</code>. If the operation is successful, <code>msg.payload</code> will contain code>{ success: true }</code>.
-	    On failure, <code>msg.payload</code> will
-	    contain <code>{ success: false }</code>, and an error message will be returned in <code>msg.error</code>.
-	</p>
 </script>
 
 <script type="text/javascript">
